Create action and reducer for user submitting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "paths": {
       "models": ["models/*"],
       "utils": ["utils/*"],
-      "pages": ["pages/*"]
+      "pages": ["pages/*"],
+      "services": ["services/*"]
     }
   },
   "include": [
