--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
-    "modulePaths": ["<rootDir>/src/models"],
+    "modulePaths": ["<rootDir>/src", "<rootDir>/src/models", "<rootDir>/src/state"],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
